--- a/mygame/client/index.html
+++ b/mygame/client/index.html
@@ -7,8 +7,9 @@
     <title>Programmieren 3</title>
 </head>
 <body>
-    <button id="destroyerButton">Create Rasen-Destroyer</button>
-    <button id="fleischfresserButton">Create Fleischfresser</button>
+    <button id="destroyerButton">Erstelle Rasen-Zerstörer</button>
+    <button id="fleischfresserButton">Erstelle Fleischfresser</button>
+    <button id="explosion">Erstelle Explosion</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js"></script>
     <script src="client.js"></script>
     <script src="/socket.io/socket.io.js"></script>
