added wheater colors + added other things :)

--- a/mygame/client/index.html
+++ b/mygame/client/index.html
@@ -10,6 +10,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            user-select: none;
         }
         button {
             width: 10rem;
@@ -46,6 +47,7 @@
     <button id="destroyerButton">Erstelle Rasen-Zerstörer</button>
     <button id="fleischfresserButton">Erstelle Fleischfresser</button>
     <button id="explosion">Erstelle Explosion</button>
+    <button id="weather">Frühling</button>
     <div class="container">
         <h3 id="selected-field-text">Selected: None</h3>
         <div id="selected-field" class="selected-field"></div>
